<?xml version="1.0"?>
<package>
  <name>warebot_gazebo</name>
  <version>1.0.0</version>
  <description>A compact warehouse robot with a differential drive in Gazebo with ROS support</description>

  <maintainer email="hasifuzir@gmail.com">Hasif Uzir</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
